ARGOCD/polybotinfra/polybot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot
  template:
    metadata:
      labels:
        app: polybot
    spec:
      containers:
        - name: polybot
          image: docker.io/jeenge/polybot:2f04d7ca0a0c2f5cf91fa95f0378d1e700114a80
          command:
            - python
            - app.py
          ports:
            - containerPort: 8443
      imagePullSecrets:
        - name: dockerhub-secret
