ARGOCD/polybotinfra/polybot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-polybot
  namespace: default
spec:
  selector:
    app: polybot  # Changed the selector to match the Deployment labels
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
