ARGOCD/polybotinfra/polybott-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polybott-service
  namespace: default
spec:
  selector:
    app: polybott  # Changed the selector to match the Deployment labels
  ports:
  - protocol: TCP
    port: 8443
    targetPort: 8443
